added a button to access the next page

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+    <style>
+        p.big {
+          line-height:2.5;
+        }
+    
+      
+        </style>
+
   <meta charset="utf-8">
   <title>GITHUB SEARCH</title>
   <base href="/">
